Minor changes to login with check

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 <!-- partial:index.partial.html -->
   <div class="container"> 
-    <a href="Login.html" ><img class="icon" src="/Imagens/user.png" alt="user" ></a>
-    <img src="/Imagens/icon.png" alt="Logo"  class="logotipo">
+    <a href="Login.html" ><img class="icon" src="Imagens\user.png" alt="user" ></a>
+    <img src="Imagens\icon.png" alt="Logo"  class="logotipo">
     <div class="inputgroup"> 
       <button class="search-btn">
       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -29,29 +29,20 @@
 	      </g>
       </svg>
         </button>
-      <input type="text" class="search"             placeholder="Search" />
+      <input type="text" class="search" placeholder="Search" />
       
-    </div>
-        <button class="cross-btn">
-          <svg height="12px" viewBox="0 0 329.26933 329" width="12px" xmlns="http://www.w3.org/2000/svg" class="cross"><path d="m194.800781 164.769531 128.210938-128.214843c8.34375-8.339844 8.34375-21.824219 0-30.164063-8.339844-8.339844-21.824219-8.339844-30.164063 0l-128.214844 128.214844-128.210937-128.214844c-8.34375-8.339844-21.824219-8.339844-30.164063 0-8.34375 8.339844-8.34375 21.824219 0 30.164063l128.210938 128.214843-128.210938 128.214844c-8.34375 8.339844-8.34375 21.824219 0 30.164063 4.15625 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921875-2.089844 15.082031-6.25l128.210937-128.214844 128.214844 128.214844c4.160156 4.160156 9.621094 6.25 15.082032 6.25 5.460937 0 10.921874-2.089844 15.082031-6.25 8.34375-8.339844 8.34375-21.824219 0-30.164063zm0 0"/></svg>
-        </button>
       </div>
     </div>
-    <div class="slider">
-      <ul>
-        <li><img src="/Imagens/1.png" alt="" /></li>
-        <li><img src="/Imagens/2.png" alt="" /></li>
-        <li><img src="/Imagens/3.png" alt="" /></li>
-        <li><img src="/Imagens/2.png" alt="" /></li>
-      </ul>
+      <div class="slider">
+        <ul>
+          <li><img src="Imagens\1.png" alt="" /></li>
+          <li><img src="Imagens\2.png" alt="" /></li>
+          <li><img src="Imagens\3.png" alt="" /></li>
+          <li><img src="Imagens\2.png" alt="" /></li>
+        </ul>
     </div>
     
   </div>
-
-<script
-  src="https://code.jquery.com/jquery-3.6.0.js"
-  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-  crossorigin="anonymous"></script>
 <!-- Ligação para o script-->
   <script  src="script.js"></script>
 
