--- a/Login.html
+++ b/Login.html
@@ -5,45 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sport-Now</title>
-    <link rel="shortcut icon" href="Images\favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Imagens\favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="login.css">
+
 </head>
 <body>
     <header class="header_bar">
-        <a href="Login.html" ><img class="icon" src="user.png" alt="user" ></a>
-        <img src="icon.png" alt="Logo"  class="logotipo">
+        <a href="Login.html" ><img class="icon" src="Imagens\user.png" alt="user" ></a>
+        <img src="Imagens\icon.png" alt="Logo"  class="logotipo">
     </header>
     <section class="user">
         <div class="user_options-container">
           <div class="user_options-text">
             <div class="user_options-unregistered">
               <h2 class="user_unregistered-title">Don't have an account?</h2>
-              <p class="user_unregistered-text">Banjo tote bag bicycle rights, High Life sartorial cray craft beer whatever street art fap.</p>
+              <p class="user_unregistered-text">Come join us in this mess of a WebSite</p>
               <button class="user_unregistered-signup" id="signup-button">Sign up</button>
             </div>
-      
-            <div class="user_options-registered">
-              <h2 class="user_registered-title">Have an account?</h2>
-              <p class="user_registered-text">Banjo tote bag bicycle rights, High Life sartorial cray craft beer whatever street art fap.</p>
-              <button class="user_registered-login" id="login-button">Login</button>
-            </div>
-          </div>
-          
           <div class="user_options-forms" id="user_options-forms">
             <div class="user_forms-login">
               <h2 class="forms_title">Login</h2>
               <form class="forms_form">
                 <fieldset class="forms_fieldset">
                   <div class="forms_field">
-                    <input type="email" placeholder="Email" class="forms_field-input" required autofocus />
+                    <input type="email" placeholder="Email" class="forms_field-input" id="emailLogin" autofocus />
                   </div>
                   <div class="forms_field">
-                    <input type="password" placeholder="Password" class="forms_field-input" required />
+                    <input type="password" placeholder="Password" class="forms_field-input" id ="passwordLogin" />
                   </div>
                 </fieldset>
                 <div class="forms_buttons">
                   <button type="button" class="forms_buttons-forgot">Forgot password?</button>
-                  <input type="submit" value="Log In" class="forms_buttons-action">
+                  <input type="submit" value="Log In" class="forms_buttons-action" id = "buttonLogin">
                 </div>
               </form>
             </div>
@@ -69,5 +62,6 @@
           </div>
         </div>
       </section>
+      <script src="script_login.js"></script>
 </body>
 </html>
