--- a/Login.html
+++ b/Login.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sport-Now</title>
     <link rel="shortcut icon" href="Imagens\favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="Css\login.css">
 
 </head>
 <body>
     <header class="header_bar">
-        <a href="Login.html" ><img class="icon" src="Imagens\user.png" alt="user" ></a>
-        <img src="Imagens\icon.png" alt="Logo"  class="logotipo">
+        <img class="icon" src="Imagens\user.png" alt="user" >
+        <a href="index.html"><img src="Imagens\icon.png" alt="Logo"  class="logotipo"></a>
     </header>
     <section class="user">
         <div class="user_options-container">
@@ -62,6 +62,6 @@
           </div>
         </div>
       </section>
-      <script src="script_login.js"></script>
+      <script src="Scripts\script_login.js"></script>
 </body>
 </html>
