Changes search detail

--- a/gestaoUser.html
+++ b/gestaoUser.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header_bar">
-        <a href="Login.html" ><img class="icon" src=".\\Imagens\user.png" alt="user" ></a>
+        <img class="icon" src=".\\Imagens\user.png" alt="user" >
         <a href="index.html"><img src="Imagens\icon.png" alt="Logo"  class="logotipo"></a>
     </header>
     <div class ="title">
@@ -138,7 +138,8 @@
             </div>
             <div class="users_recentes"><img src="Imagens\user.png" class="user_img_registo">
                 <h2>Rui</h2>
-                <span>31 anos e comprou 9 produtos</span></div>
+                <span>31 anos e comprou 9 produtos</span>
+            </div>
         </div>
     </div>
     <div class="table">
