--- a/search.html
+++ b/search.html
@@ -100,6 +100,7 @@
   </div>
 
 
+  <!--  detalhes do produto  -->
   <div class="details" id ="details">
     <div class="div_img">
       <img src="" class="detail-img" />
@@ -112,7 +113,7 @@
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
         <i class="fas fa-star-half-alt"></i>
-        <span>250k reviews</span>
+        <span></span>
       </div>
       <div class="price_line">
         <h2 class="price-show"></h2>
